# smart-calendar-personal-assessment

./: README  README.md  SignIn.html  SignUp.html  package-lock.json  requirements.txt
Calendar+/: SignIn.html  homepage.html
backend/: .env  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  sql.db
backend/src/backend/: auth.py  config.py  database.py  main.py  models.py  schemas.py  security.py
backend/src/backend/core/: auth.py  config.py  database.py  main.py
backend/src/backend/middleware/: cors.py  logging.py
backend/src/backend/models/: calendar.py  category.py  event.py  habit.py  habitLog.py  user.py
backend/src/backend/routes/: calendar.py  category.py  event.py  habit.py  habits.py  user.py
backend/src/backend/schemas/: calendar.py  category.py  event.py  habit.py  habitLog.py  token.py  user.py
backend/src/backend/services/: calendar.py  category.py  dependencies.py  event.py  habit.py  habitLog.py  user.py
frontend/: .gitignore  README.md  SignIn.html  SignUp.html  account.html  homepage.html  main.html  next.config.ts  package-lock.json  package.json  planner.html  settings.html  styles.css  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/account/: page.tsx
frontend/src/app/planner/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/signin/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: account-profile.tsx  app-sidebar.tsx  habit-form.tsx  habits.tsx  header.tsx  login-form.tsx  nav-user.tsx  settings-form.tsx  signup-form.tsx  theme-provider.tsx
frontend/src/components/ui/: alert-dialog.tsx  sidebar.tsx  sonner.tsx
frontend/src/hooks/: useAuth.ts  useUser.ts
frontend/src/lib/: constants.ts  utils.ts
frontend/src/ui/: theme-mode.tsx  theme-root.tsx
