[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "whyneedtoknow", email = "rayskim221@gmail.com" },
  { name = "mthuvu", email = "helloitsthu@gmail.com" },
  { name = "kaylahicksz", email = "kaylahicksa@gmail.com"},
  { name = "JehnFlores", email = "johnadrielflores@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "bandit>=1.8.3",
  "datetime>=5.5",
  "fastapi-security>=0.1.0",
  "fastapi[all,security,standard]",
  "passlib[bcrypt]>=1.7.4",
  "pre-commit>=4.2.0",
  "pyjwt>=2.10.1",
  "python-dotenv>=1.1.0",
  "ruff>=0.11.5",
  "sqlalchemy>=2.0.40",
  "uvicorn>=0.34.0",
]

[project.urls]
Documentation = "https://github.com/SDSU-CompE-561-Spring-2025/smart-calendar-personal-assessment/blob/main/README"
Issues = "https://github.com/SDSU-CompE-561-Spring-2025/smart-calendar-personal-assessment/issues"
Source = "https://github.com/SDSU-CompE-561-Spring-2025/smart-calendar-personal-assessment"

[tool.hatch.version]
path = "src/backend/__about__.py"

[tool.hatch.envs.default]
# Default environment setting
python = "3.12"
installer = "uv"
path = ".venv"

[tool.hatch.envs.default.scripts]
#Default environment script for development and database operations
dev = "fastapi dev {args:src/backend/main.py}"

[tool.hatch.envs.types]
installer = "uv"
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/backend tests}"

[tool.coverage.run]
source_pkgs = ["backend", "tests"]
branch = true
parallel = true
omit = [
  "src/backend/__about__.py",
]

[tool.coverage.paths]
backend = ["src/backend", "*/backend/src/backend"]
tests = ["tests", "*/backend/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests"]
